Sun Feb  6 12:12:59 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/fileasserts.rb (FileAssertions): separate module.

Sun Feb  6 11:29:23 2011  Tanaka Akira  <akr@fsij.org>

	* ext/dbm/dbm.c: parenthesize macro arguments.

Sat Feb  5 22:01:59 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/test/unit/assertions.rb (Test::Unit::Assertions#assert):
	  revert r30796. r30797 and r30798 are an alternative fix.
	  [ruby-dev:43174]

Sat Feb  5 21:47:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (mlhs_basic): include mlhs_post for ripper.  a patch
	  from Michael Edgar at [ruby-core:35078].

Sat Feb  5 21:22:21 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (assert_block): move from
	  test/fileutils/fileasserts.rb.

	* test/fileutils/fileasserts.rb (assert_block): pass arguments
	  as-is.  [ruby-dev:43174]

Sat Feb  5 16:47:54 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/test/unit/assertions.rb (Test::Unit::Assertions#assert):
	  msg can be passed nil. [Bug #4371] [ruby-dev:43174]

Sat Feb  5 15:18:25 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc: Upgrade to RDoc 3.5.2

Sat Feb  5 12:05:27 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (syck_node_init_copy): SyckNode is not
	  copiable.  [ruby-core:35094]

Sat Feb  5 11:48:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_cipher.c (ossl_cipher_alloc): leave data ptr
	  NULL.

	* ext/openssl/ossl_cipher.c (ossl_cipher_new, ossl_cipher_initialize):
	  allocate internal structure.  [ruby-core:35094]

	* ext/openssl/ossl_cipher.c (ossl_cipher_copy): ditto.

Sat Feb  5 11:29:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/parser/parser.h (GET_PARSER): raise TypeError.

	* ext/json/parser/parser.rl (cParser_initialize): ditto.

	* ext/json/parser/parser.h (GET_PARSER): check if initialized.
	  [ruby-core:35079]

	* ext/json/parser/parser.rl (cParser_initialize): ditto.
