@@ -1,3 +1,8 @@
+Sun Feb  6 12:18:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (words, qwords): dispatch array events.  based on a
+	  patch from Michael Edgar.  [Bug #4365].
+
 Sun Feb  6 12:12:59 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* test/fileutils/fileasserts.rb (FileAssertions): separate module.
